--- a/vignettes/usage-newsanchor.Rmd
+++ b/vignettes/usage-newsanchor.Rmd
@@ -9,7 +9,6 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-
 ```{r global_options, include=FALSE}
 knitr::opts_chunk$set(warning=FALSE, message=FALSE, eval = FALSE, fig.align="center")
 ```
@@ -18,8 +17,8 @@ knitr::opts_chunk$set(warning=FALSE, message=FALSE, eval = FALSE, fig.align="cen
 library(newsanchor)
 ```
 
-<br> This is an introductory vignette to the **newsanchor** package. The package connects to https://newsapi.org/. **News API** is a simple HTTP REST API for searching and retrieving live articles from all over the web. You can get breaking news headlines, and search for articles from over 30,000 news sources and blogs. <br>
-The API can generally be used for free for non-commercial use cases. However, please be aware, that this results in some restrictions. For instance, you cannot download more than 1.000 results. Please see also https://newsapi.org/pricing for commerical options. <br><br>
+<br> This is an introductory vignette to the **newsanchor** package. The package connects to https://newsapi.org/. **News API** is a simple HTTP REST API for searching and retrieving (live) articles from all over the web. You can get breaking news headlines, and search for articles from over 30,000 news sources and blogs. <br>
+The API can generally be used for free for non-commercial use cases. However, please be aware, that this results in some restrictions. For instance, you cannot download more than 1,000 results in a given search. Please see https://newsapi.org/pricing for commercial options.<br><br>
 
 The package helps you to answer questions like the following:<br>
 
@@ -27,21 +26,21 @@ The package helps you to answer questions like the following:<br>
 - What **articles** were published about your favorite politician, movie star, singer, or celebrity **today**?
 - What are the breaking news in **business**, **entertainment**, or **sports**?
 
-The package is publicly available at GitHub and hopefully soon at CRAN as well. In this vignette we demonstrate basic features of the package. In a second vignette, we show how the package can be used to scrape your results from an example online newspaper (i.e. New York Times).<br><br>
+The package is publicly available at GitHub and hopefully soon at CRAN as well. In this vignette we demonstrate basic features of the package. In a second vignette, we show how the package can be used to scrape your results from an example online newspaper (i.e., New York Times).<br><br>
 
 ## Authentication
-You need an API key to access https://newsapi.org. You can apply for a key at https://newsapi.org/register/. The function below appends the key automatically to your R environment file. Hence, every time you start R the key is loaded. The functions `get_headlines`, `get_headlines_all`, `get_everything`, `get_everything_all`, and `get_sources` access your key automatically by executing `Sys.getenv("NEWS_API_KEY")`. Alternatively, you can provide an explicit definition of your api_key with each function call.<br><br>
+You need an API key to access https://newsapi.org. You can apply for a key at https://newsapi.org/register/. The function below appends the key automatically to your R environment file. Hence, every time you start R, the key is loaded. The functions `get_headlines`, `get_headlines_all`, `get_everything`, `get_everything_all`, and `get_sources` access your key automatically by executing `Sys.getenv("NEWS_API_KEY")`. Alternatively, you can provide an explicit definition of your api_key with each function call.<br><br>
 
 ```{r set_api_key}
-# save the api key in the .Renviron file
+# save the api_key in the .Renviron file
 set_api_key(api_key = "YOUR API KEY", 
             path = "~/.Renviron")
 ```
 
 <br>
 
-## get_headlines / get_headlines_all
-These functions connect to the API's endpoint that returns breaking news headlines for a country and category, or currently running on a single or multiple sources. This is perfect if you want to download live up-to-date news headlines and images. You can provide **specific news-sources**, **categories**, **countries**, and/or **queries**. For valid searchterms see the respective paragraph below.
+## Functions: get_headlines() / get_headlines_all()
+These functions connect to the API's endpoint that returns breaking news headlines for a country and category, or currently running on a single or multiple sources. This is perfect if you want to download live up-to-date news headlines and images. You can provide **specific news sources**, **categories**, **countries**, and/or **queries**. For valid searchterms see the respective paragraph below.
 
 ```{r headlines: examples}
 # get headlines published by the Washington Post
@@ -55,27 +54,27 @@ results <- get_headlines(query = "Trump")
 
 ```
 
-**Limitations:** <br>
+**Limitations** <br>
 
 - Please note, only **one** searchterm can be used for `category`, `country`, or `query`. Additional elements will be ignored.
 - In addition, `sources` must not be combined with `country` and/or `category`. <br>
 
-**Additional settings:**<br>
-The default of https://newsapi.org only allows to get maximal 100 results per search. Since some search terms might yield much more results, you can use the option **page** to browse throught your results (per default: page = 1). You can change the number of results returned per request using **page_size** (per default: page_size = 100). 
+**Additional settings**<br>
+Regarding `get_headlines()`, the default of https://newsapi.org only allows to get a maximum of 100 results per request. Since some search terms might yield more results, you can use the option **page** to browse through your results (per default: page = 1). You can change the number of results returned per request using **page_size** (per default: page_size = 100). 
 
 ```{r headlines: page, page_size}
 results <- get_headlines(category = "sports", page = 2)
 results <- get_headlines(category = "sports", page = 3, page_size = 20)
 ```
 
-**get_headlines_all:**<br>
-To automatically download all results, use **get_headlines_all**. This function is build around `get_headlines` and provides the same options (except for `page` and `page_size`). 
+**get_headlines_all**<br>
+To automatically download all results, use `get_headlines_all()`. This function is build around `get_headlines` and provides the same options (except for `page` and `page_size`). It returns a data frame with all results.
 
 ```{r headlines: get_all}
 results <- get_headlines_all(category = "sports")
 ```
 
-**searchterms:**<br>
+**searchterms**<br>
 We provide different dataframes :`terms_category`, `terms_sources`, and `terms_country`. They contain information on valid search terms. Access them if you are not sure whether some country or some sources will work.
 
 ```{r headlines: searchterms}
@@ -85,20 +84,14 @@ terms_sources
 ```
 
 
-
-
-
-
-
-
 <br>
 
 
-## get_everything / get_everything_all
-This endpoint searches through articles from large and small news sources and blogs. This includes breaking news as well as other kinds of normal articles. This function needs a compulsory `query` with each function call. You can make your search more fine-tuned using the following additional options: <br>
+## Functions: get_everything() / get_everything_all()
+This endpoint searches through articles from large and small news sources and blogs. This includes news as well as other kinds of normal articles. This function needs a compulsory `query` with each function call. You can make your search more fine-tuned using the following additional options: <br>
 
 - surround entire phrases with quotes ("") for exact matches. 
-- prepend words/phrases that must appear with "+" symbol (e.g., +bitcoin). 
+- prepend words/phrases that must appear with "+" symbol (e.g., +bitcoin).
 - prepend words that must not appear with "-" symbol (e.g., -bitcoin). 
 - you can also use AND, OR, NOT keywords (optionally grouped with parenthesis, e.g., 'crypto AND (ethereum OR litecoin) NOT bitcoin)').
 
@@ -106,9 +99,10 @@ This endpoint searches through articles from large and small news sources and bl
 # get everything published about Trump
 results <- get_everything(query = "Trump")
 # get everything published with the phrase "Trump says"
-results <- get_everything(query = "Trump says")
+results <- get_everything(query = "Trump says +migrants")
+# get everything published with the phrase "Trump" and "migrants" but without "Mexico"
+results <- get_everything(query = "Trump +migrants -Mexico")
 ```
-
 
 <br> As stated above, you always have to provide a `query` with the function call. However, you can limit your results to multiple **sources**, different **languages**, or different **domains**. You are also able to **exclude_domains** or mark the start (**from**) or end (**to**) time of your search. 
 
@@ -127,15 +121,15 @@ results <- get_everything(query = "Trump", exclude_domains = "bbc.com")
 results <- get_everything(query = "Trump", from = "2018-09-08")
 ```
 
-**Limitations:** <br>
+**Limitations** <br>
 
 - If you use the option `sources`, there is a limitation to 20 sources. 
 - The options of `from` and `to` should be in ISO 8601 format.
-- The `language` needs to be a two digits ISO 639-1 code. You can only use one language for a search, default is all.
+- The `language` needs to be a two digits ISO 639-1 code. You can only use one language for a search, default is all. See `newsanchor::terms_language` for all possible languages. 
 - Some limitations are restricted to the free plan of www.newsapi.org. For example, you cannot access articles that have been published more than a month ago. This can only be accomplished using the paid plan. 
 
-**Additional settings:**<br>
-The default of https://newsapi.org only allows to get a maximum of 1,000 results per search. Since some search terms might yield much more results, you can use the option **page** to browse throught your results (per default: page = 1). You can change the number of results returned per request using **page_size** (per default: page_size = 100). 
+**Additional settings**<br>
+The default of https://newsapi.org only allows to get a maximum of 1,000 results per search/day. Since some search terms might yield much more results, you can use the option **page** to browse throught your results (per default: page = 1). You can change the number of results returned per request using **page_size** (per default: page_size = 100).
 
 ```{r everything: page, page_size}
 results <- get_everything(query = "Trump", page = 2)
@@ -154,14 +148,14 @@ results <- get_everything(query = "Trump", sort_by = "publishedAt")
 
 ```
 
-**get_everything_all:**<br>
-To automatically download all results, use **get_everything_all**. This function is build around `get_everything` and provides the same options (except for *page* and *page_size*). 
+**get_everything_all**<br>
+To automatically download all results, use **get_everything_all**. This function is build around `get_everything` and provides the same options (except for *page* and *page_size*). Be aware that here, the limit of 1,000 articles kicks in if you do not have a paid plan. The function will then provide you with a dataset of these 1,000 results and stop there. 
 
 ```{r everything: get_all}
 results <- get_everything_all(query = "Trump")
 ```
 
-**searchterms:**<br>
+**searchterms**<br>
 We provide several dataframes with valid search terms. You can find all dataframes below:
 
 ```{r everything: searchterms}
@@ -170,7 +164,6 @@ terms_sources
 terms_country
 terms_category
 ```
-
 
 <br>
 
