--- a/README.Rmd
+++ b/README.Rmd
@@ -39,10 +39,10 @@ The package is under continuous development and will be extended with additional
 
 ```{r, eval=FALSE}
 # install package from CRAN
-install.packages("rzeit2")
+install.packages("newsanchor")
 
 # load package
-library(rzeit2)
+library(newsanchor)
 ```
 
 ### Current Development Version
@@ -57,7 +57,7 @@ if (!requireNamespace("devtools", quietly = TRUE)) {
 devtools::install_github("correlaid/newsanchor")
 
 # load package
-library(rzeit2)
+library(newsanchro)
 ```
 
 ## Introduction
