--- a/vignettes/usage-newsanchor.Rmd
+++ b/vignettes/usage-newsanchor.Rmd
@@ -4,7 +4,7 @@ author: "Lars Schulze <lars.schulze@hotmail.com>"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Usage of newsanchor}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
