--- a/README.Rmd
+++ b/README.Rmd
@@ -66,12 +66,32 @@ library(newsanchor)
 
 ### Authentication
 
-You need an API key to access https://newsapi.org. You can apply for a key at https://newsapi.org/register/. The function below appends the key automatically to your R environment file. Hence, every time you start R the key is loaded. The functions `get_headlines`, `get_headlines_all`, `get_everything`, `get_everything_all`, and `get_sources` access your key automatically by executing `Sys.getenv("NEWS_API_KEY")`. Alternatively, you can provide an explicit definition of your api_key with each function call.
+You need an API key to access https://newsapi.org. You can apply for a key at https://newsapi.org/register/. 
+It is common practice to set API keys in your R environment file. Hence, every time you start R the key is loaded. The functions `get_headlines`, `get_headlines_all`, `get_everything`, `get_everything_all`, and `get_sources` access your key automatically by executing `Sys.getenv("NEWS_API_KEY")`. Alternatively, you can provide an explicit definition of your api_key with each function call.
+
+In order to add your key to your environment file, you can use the function `edit_r_environ` from the `usethis` package.
+
+```{r edit_r_environ, eval=FALSE, echo=FALSE}
+# save the api key in the .Renviron file
+# install.packages("usethis") 
+library(usethis)
+edit_r_environ()
+```
+This will open your `.Renviron` file in your text editor. Now, you can add the following line to it:
+
+```
+NEWS_API_KEY="yourkeygoeshere"
+
+```
+
+Save the file and restart R for the changes to take effect. 
+
+If your `.Renviron` lives at a non-conventional place, you can also use the function `set_api_key` from the `newsanchor` package to add the API key to your environment file. The function below appends the key automatically to your R environment file. 
 
 ```{r set_api_key, eval=FALSE}
 # save the api key in the .Renviron file
 set_api_key(api_key = "YOUR API KEY", 
-            path    = "~/.Renviron")
+            path    = "/my/path/to/.Renviron")
 ```
 
 ### get_headlines / get_headlines_all
