--- a/README.Rmd
+++ b/README.Rmd
@@ -88,12 +88,11 @@ NEWS_API_KEY="yourkeygoeshere"
 
 Save the file and restart R for the changes to take effect. 
 
-If your `.Renviron` lives at a non-conventional place, you can also use the function `set_api_key` from the `newsanchor` package to add the API key to your environment file. The function below appends the key automatically to your R environment file. 
+If your `.Renviron` lives at a non-conventional place, you can also use the function `set_api_key` from the `newsanchor` package to add the API key to your environment file. The function below appends the key automatically to your R environment file. You will be prompted to enter your API key into a popup box. 
 
 ```{r set_api_key, eval=FALSE}
 # save the api key in the .Renviron file
-set_api_key(api_key = "YOUR API KEY", 
-            path    = "/my/path/to/.Renviron")
+set_api_key(path    = "/my/path/to/.Renviron")
 ```
 
 ### get_headlines / get_headlines_all
